--- a/UlmFit_newsGroup4.ipynb
+++ b/UlmFit_newsGroup4.ipynb
@@ -1472,7 +1472,7 @@
         "colab": {}
       },
       "source": [
-        "preds, targets = learn.get_preds()"
+        "preds, targets = learn.get_preds() #gets preds of the validation data set"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2063,25 +2063,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ke7kR4qBRiql",
+        "id": "3ECNYFs-yfxV",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#np.mean(predictions==targets)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cVDkVyfqJAbc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+        "#TODO add the df_test into the data"
       ],
       "execution_count": 0,
       "outputs": []
