--- a/Word2vec_in_python_numpy.ipynb
+++ b/Word2vec_in_python_numpy.ipynb
@@ -140,6 +140,8 @@
         "\n",
         "    # the above is what the training does..\n",
         "\n",
+        "    # stemming – the network will likely learn similar word vectors for the words “ant” and “ants” because these should have similar contexts. and thus a first step in stemming\n",
+        "\n",
         "    # BACKPROPAGATION\n",
         "    def backprop(self, e, h, x):\n",
         "        dl_dw2 = np.outer(h, e)  \n",
@@ -258,16 +260,16 @@
       "metadata": {
         "id": "r554bOiYnc4d",
         "colab_type": "code",
+        "outputId": "7127abbc-cd2f-43d6-ca0e-fb2376d6cbf4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "7127abbc-cd2f-43d6-ca0e-fb2376d6cbf4"
+        }
       },
       "source": [
         "word_counts"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,16 +320,16 @@
       "metadata": {
         "id": "ADnE5rG0nnH4",
         "colab_type": "code",
+        "outputId": "0af63d6f-0fa7-4136-e2f3-1f90b0721c03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        },
-        "outputId": "0af63d6f-0fa7-4136-e2f3-1f90b0721c03"
+        }
       },
       "source": [
         "word_counts"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,11 +358,11 @@
       "metadata": {
         "id": "uaL03EJ26p_S",
         "colab_type": "code",
+        "outputId": "91b9adb1-d9ec-4da8-9ea8-b1a26cfc7559",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "91b9adb1-d9ec-4da8-9ea8-b1a26cfc7559"
+        }
       },
       "source": [
         "settings = {}\n",
@@ -383,7 +385,7 @@
         "# train word2vec model\n",
         "w2v.train(training_data)\n"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5398,16 +5400,16 @@
       "metadata": {
         "id": "_momPvD76p7N",
         "colab_type": "code",
+        "outputId": "49f1d273-2487-4b6e-e321-8fa73f067d43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "49f1d273-2487-4b6e-e321-8fa73f067d43"
+        }
       },
       "source": [
         "w2v.words_list"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5442,16 +5444,16 @@
       "metadata": {
         "id": "sqRCPN7X6p3D",
         "colab_type": "code",
+        "outputId": "8ea7c8bb-079e-4c38-fd98-f0668aff42d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "8ea7c8bb-079e-4c38-fd98-f0668aff42d2"
+        }
       },
       "source": [
         "w2v.word_vec('dog')"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5472,18 +5474,18 @@
       "metadata": {
         "id": "4qUSDFsL6ppo",
         "colab_type": "code",
+        "outputId": "ff3eff46-8371-450f-dae3-e0f83814ed51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "ff3eff46-8371-450f-dae3-e0f83814ed51"
+        }
       },
       "source": [
         "w2v.vec_sim(w2v.word_vec('dog'), 2) \n",
         "# here comes class uses... you can make sure that the word you are searching for is being searched in the w2v model you have trained on the particular porpus\n",
         "# given the limited vocab.. results are a tad disappointing"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5500,16 +5502,16 @@
       "metadata": {
         "id": "hoCKXV-n8xLA",
         "colab_type": "code",
+        "outputId": "1b65bb99-9fb4-4f1d-e868-d3fa35806a33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "1b65bb99-9fb4-4f1d-e868-d3fa35806a33"
+        }
       },
       "source": [
         "w2v.word_sim('dog', 2) # interesting that over is most closely attached to dog... :)"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5562,16 +5564,16 @@
       "metadata": {
         "id": "y6XvSLLUu6Qi",
         "colab_type": "code",
+        "outputId": "532ea7dd-53e5-42dc-f587-434f676ceeb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "532ea7dd-53e5-42dc-f587-434f676ceeb4"
+        }
       },
       "source": [
         "v_count"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5605,16 +5607,16 @@
       "metadata": {
         "id": "RKPsHQ4nvgBD",
         "colab_type": "code",
+        "outputId": "9e3671f7-c646-42b5-b5da-f82522f9579a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        },
-        "outputId": "9e3671f7-c646-42b5-b5da-f82522f9579a"
+        }
       },
       "source": [
         "w1"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5696,16 +5698,16 @@
       "metadata": {
         "id": "22jXBJ1v1DsR",
         "colab_type": "code",
+        "outputId": "6bc5e310-1ce3-47d8-9f54-ff2e84e03c67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        },
-        "outputId": "6bc5e310-1ce3-47d8-9f54-ff2e84e03c67"
+        }
       },
       "source": [
         "word_sim.items()"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5739,16 +5741,16 @@
       "metadata": {
         "id": "orsaH-b25kIn",
         "colab_type": "code",
+        "outputId": "fd23a755-4899-4743-a57c-e17d6568724c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        },
-        "outputId": "fd23a755-4899-4743-a57c-e17d6568724c"
+        }
       },
       "source": [
         "words_sorted"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5776,11 +5778,11 @@
       "metadata": {
         "id": "96i2m4Sp0hz6",
         "colab_type": "code",
+        "outputId": "b03c1a05-4394-4861-a3e6-448779d0cc6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        },
-        "outputId": "b03c1a05-4394-4861-a3e6-448779d0cc6a"
+        }
       },
       "source": [
         "  words_sorted = sorted(word_sim.items(), key=lambda(word, sim):sim, reverse=True)\n",
@@ -5788,7 +5790,7 @@
         "        for word, sim in words_sorted[:top_n]:\n",
         "            print word, sim"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -5834,16 +5836,16 @@
       "metadata": {
         "id": "zP5cl78h3hPb",
         "colab_type": "code",
+        "outputId": "64d4880b-d28a-405e-ecda-32cffb260c2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "64d4880b-d28a-405e-ecda-32cffb260c2e"
+        }
       },
       "source": [
         "d_test.items()"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5864,16 +5866,16 @@
       "metadata": {
         "id": "VPA4hFNu3jYw",
         "colab_type": "code",
+        "outputId": "d1ef7aee-5cfc-4c45-953b-6f82d6ba7660",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "d1ef7aee-5cfc-4c45-953b-6f82d6ba7660"
+        }
       },
       "source": [
         "sorted(d_test.items())"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5894,16 +5896,16 @@
       "metadata": {
         "id": "dHtcT9d84PBF",
         "colab_type": "code",
+        "outputId": "a085d153-0d6c-431a-bc80-e07a4ffd16f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 639
-        },
-        "outputId": "a085d153-0d6c-431a-bc80-e07a4ffd16f0"
+        }
       },
       "source": [
         "dir(d_test.items())"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5958,16 +5960,16 @@
       "metadata": {
         "id": "xBGNiM7n3oCa",
         "colab_type": "code",
+        "outputId": "5a6209a3-d461-4e80-e94b-2ebf7b55e151",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 132
-        },
-        "outputId": "5a6209a3-d461-4e80-e94b-2ebf7b55e151"
+        }
       },
       "source": [
         "sorted(d_test.items(), key=lambda(k,v): v)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -5984,17 +5986,17 @@
       "metadata": {
         "id": "QG_0qE7136ts",
         "colab_type": "code",
+        "outputId": "e8c0cfd8-3e03-4d91-bdda-b048381a0bb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "e8c0cfd8-3e03-4d91-bdda-b048381a0bb9"
+        }
       },
       "source": [
         "sorted(d_test.items(), key=lambda item :item[1])\n",
         "#sorted(lis, key = lambda i: (i['age'], i['name']))"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
